--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,24 +1,13 @@
 cmake_minimum_required(VERSION 3.25.1)
 
-project(MT5Projects)
+project(winui)
 
 string(TOUPPER ${PROJECT_NAME} MAIN_PROJECT_NAME_UPPER)
 
 set(CMAKE_CXX_STANDARD 23)
 # 添加预定义宏
 add_definitions(-DUNICODE -D_UNICODE)
-#[[
-set(DOWN_TIMEOUT 600)
-file(DOWNLOAD "https://github.com/memade/hacker/archive/refs/heads/main.zip" 
-"D:/cmake_down.zip"
-TIMEOUT ${DOWN_TIMEOUT}
-STATUS ERR
-SHOW_PROGRESS
-)
-if(ERR EQUAL 0)
-message(STATUS "Dwon success.")
-endif(ERR EQUAL 0)
-]]
+
 set(SOLUTION_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../)
 set(CURRENT_SOLUTION_DIR ${CMAKE_CURRENT_SOURCE_DIR}/)
 set(LOCAL_CMAKE_MODULES_PATH ${SOLUTION_ROOT_DIR}/cmake/modules/)
@@ -40,6 +29,7 @@ option(ENABLE_MSVC_CRT_MT_${MAIN_PROJECT_NAME_UPPER} "Enable ${PROJECT_NAME} msv
 
 MEMADE_SET_CMAKETARGETS_FOLDER()
 
+#[[
 MEMADE_OUTPATHCONFIG("bin/${CMAKE_VS_PLATFORM_NAME}/${VS_CONFIGURATION}/components/" "" "" ON)
 add_subdirectory(${CURRENT_SOLUTION_DIR}/src/components/CFHMarketData)
 set_target_properties(CFHMarketData PROPERTIES FOLDER "components")
@@ -50,40 +40,5 @@ set_target_properties(LMAXMarketData PROPERTIES FOLDER "components")
 add_subdirectory(${CURRENT_SOLUTION_DIR}/src/components/LMAXTradeOrder)
 set_target_properties(LMAXTradeOrder PROPERTIES FOLDER "components")
 MEMADE_OUTPATHCONFIG("")
-
-MEMADE_OUTPATHCONFIG("bin/${CMAKE_VS_PLATFORM_NAME}/${VS_CONFIGURATION}/shared/" "" "" ON)
-add_subdirectory(${CURRENT_SOLUTION_DIR}/src/shared/protocol)
-set_target_properties(protocol PROPERTIES FOLDER "shared")
-MEMADE_OUTPATHCONFIG("")
-
-MEMADE_OUTPATHCONFIG("" "" "lib")
-add_subdirectory(${CURRENT_SOLUTION_DIR}/src/shared/trade_helper)
-set_target_properties(trade_helper PROPERTIES FOLDER "shared")
-add_subdirectory(${CURRENT_SOLUTION_DIR}/src/shared/trade_algorithm)
-set_target_properties(trade_algorithm PROPERTIES FOLDER "shared")
-MEMADE_OUTPATHCONFIG("")
-
-MEMADE_OUTPATHCONFIG("bin" "" "")
-add_subdirectory(${CURRENT_SOLUTION_DIR}/src/system/bridge)
-set_target_properties(bridge PROPERTIES FOLDER "system")
-add_subdirectory(${CURRENT_SOLUTION_DIR}/src/manager/manager_bridge)
-set_target_properties(manager_bridge PROPERTIES FOLDER "managers")
-add_subdirectory(${CURRENT_SOLUTION_DIR}/src/manager/manager_follow)
-set_target_properties(manager_follow PROPERTIES FOLDER "managers")
-
-add_subdirectory(${CURRENT_SOLUTION_DIR}/src/license/license/)
-set_target_properties(license PROPERTIES FOLDER "licenses")
-add_subdirectory(${CURRENT_SOLUTION_DIR}/src/license/license_tool/)
-set_target_properties(license_tool PROPERTIES FOLDER "licenses")
-MEMADE_OUTPATHCONFIG("")
-
-MEMADE_OUTPATHCONFIG("bin/${CMAKE_VS_PLATFORM_NAME}/${VS_CONFIGURATION}/plugins/" "" "" ON)
-add_subdirectory(${CURRENT_SOLUTION_DIR}/src/plugin/dealer)
-set_target_properties(dealer PROPERTIES FOLDER "plugins")
-add_subdirectory(${CURRENT_SOLUTION_DIR}/src/plugin/feeder)
-set_target_properties(feeder PROPERTIES FOLDER "plugins")
-add_subdirectory(${CURRENT_SOLUTION_DIR}/src/plugin/follow)
-set_target_properties(follow PROPERTIES FOLDER "plugins")
-MEMADE_OUTPATHCONFIG("")
-
-MSVC_SET_STARTUP_PROJECT(bridge ${CMAKE_CURRENT_SOURCE_DIR})
+]]
+#MSVC_SET_STARTUP_PROJECT(bridge ${CMAKE_CURRENT_SOURCE_DIR})
